--- a/templates/liff.html
+++ b/templates/liff.html
@@ -242,6 +242,11 @@
                                         "margin": "lg"
                                     }]
                                 }]
+                            },
+                            "footer": {
+                                "type": "box",
+                                "layout": "vertical",
+                                "contents": []
                             }
                         }]
                     }
