--- a/templates/liff.html
+++ b/templates/liff.html
@@ -152,7 +152,6 @@
                                 "gravity": "center",
                                 "position": "relative",
                                 "flex": 0,
-                                "animated": false,
                                 "aspectMode": "cover",
                                 "aspectRatio": "64:72"
                             },
@@ -176,7 +175,7 @@
                                         "action": {
                                             "type": "uri",
                                             "label": "❖看看我挖到什麼",
-                                            "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ"
+                                            "uri": "https://zhuanlan.zhihu.com/p/134146961"
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
@@ -202,7 +201,6 @@
                                 "gravity": "center",
                                 "size": "full",
                                 "aspectMode": "cover",
-                                "animated": false,
                                 "aspectRatio": "64:72"
                             },
                             "body": {
@@ -226,7 +224,7 @@
                                         "action": {
                                             "type": "uri",
                                             "label": "❖加入Maso的好友",
-                                            "uri": "https://line.me/ti/p/KeRocPY6PP"
+                                            "uri": "https://zhuanlan.zhihu.com/p/134146961"
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
@@ -235,7 +233,7 @@
                                         "action": {
                                             "type": "uri",
                                             "label": "❖訂閱Maso的萬事屋",
-                                            "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
+                                            "uri": "https://zhuanlan.zhihu.com/p/134146961"
                                         },
                                         "color": "#B5EAEF",
                                         "style": "secondary",
