--- a/templates/liff.html
+++ b/templates/liff.html
@@ -175,7 +175,7 @@
                                         "action": {
                                             "type": "uri",
                                             "label": "❖看看我挖到什麼",
-                                            "uri": "https://translate.google.com.tw/?hl=zh-TW&sl=en&tl=zh-TW&text=boring&op=translate"
+                                            "uri": "http://linecorp.com/"
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
@@ -224,7 +224,7 @@
                                         "action": {
                                             "type": "uri",
                                             "label": "❖加入Maso的好友",
-                                            "uri": "https://translate.google.com.tw/?hl=zh-TW&sl=en&tl=zh-TW&text=boring&op=translate"
+                                            "uri": "http://linecorp.com/"
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
@@ -233,7 +233,7 @@
                                         "action": {
                                             "type": "uri",
                                             "label": "❖訂閱Maso的萬事屋",
-                                            "uri": "https://translate.google.com.tw/?hl=zh-TW&sl=en&tl=zh-TW&text=boring&op=translate"
+                                            "uri": "http://linecorp.com/"
                                         },
                                         "color": "#B5EAEF",
                                         "style": "secondary",
