--- a/templates/liff.html
+++ b/templates/liff.html
@@ -221,13 +221,13 @@
                                     "layout": "vertical",
                                     "contents": [{
                                         "type": "button",
+                                        "style": "secondary",
+                                        "color": "#B5EAEF",
                                         "action": {
                                             "type": "uri",
                                             "label": "❖加入Maso的好友",
                                             "uri": "http://linecorp.com/"
-                                        },
-                                        "style": "secondary",
-                                        "color": "#B5EAEF"
+                                        }
                                     }, {
                                         "type": "button",
                                         "action": {
