--- a/templates/liff.html
+++ b/templates/liff.html
@@ -173,9 +173,9 @@
                                     "contents": [{
                                         "type": "button",
                                         "action": {
-                                            "type": "uri",
+                                            "type": "postback",
                                             "label": "❖看看我挖到什麼",
-                                            "uri": "http://linecorp.com/"
+                                            "data": "❖看看我挖到什麼"
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
@@ -224,16 +224,16 @@
                                         "style": "secondary",
                                         "color": "#B5EAEF",
                                         "action": {
-                                            "type": "uri",
+                                            "type": "postback",
                                             "label": "❖加入Maso的好友",
-                                            "uri": "http://linecorp.com/"
+                                            "data": "❖加入Maso的好友"
                                         }
                                     }, {
                                         "type": "button",
                                         "action": {
-                                            "type": "uri",
+                                            "type": "postback",
                                             "label": "❖訂閱Maso的萬事屋",
-                                            "uri": "http://linecorp.com/"
+                                            "data": "❖訂閱Maso的萬事屋"
                                         },
                                         "color": "#B5EAEF",
                                         "style": "secondary",
