--- a/templates/liff.html
+++ b/templates/liff.html
@@ -162,7 +162,26 @@
                                 }, {
                                     "type": "box",
                                     "layout": "vertical",
-                                    "contents": []
+                                    "contents": [{
+                                        "type": "button",
+                                        "action": {
+                                            "type": "uri",
+                                            "label": "action",
+                                            "uri": "http://linecorp.com/"
+                                        },
+                                        "style": "secondary",
+                                        "color": "#5FBBAC"
+                                    }, {
+                                        "type": "button",
+                                        "action": {
+                                            "type": "uri",
+                                            "label": "action",
+                                            "uri": "http://linecorp.com/"
+                                        },
+                                        "style": "secondary",
+                                        "margin": "lg",
+                                        "color": "#5FBBAC"
+                                    }]
                                 }]
                             }
                         }, {
@@ -187,7 +206,26 @@
                                 }, {
                                     "type": "box",
                                     "layout": "vertical",
-                                    "contents": []
+                                    "contents": [{
+                                        "type": "button",
+                                        "action": {
+                                            "type": "uri",
+                                            "label": "action",
+                                            "uri": "http://linecorp.com/"
+                                        },
+                                        "style": "secondary",
+                                        "color": "#5FBBAC"
+                                    }, {
+                                        "type": "button",
+                                        "action": {
+                                            "type": "uri",
+                                            "label": "action",
+                                            "uri": "http://linecorp.com/"
+                                        },
+                                        "style": "secondary",
+                                        "margin": "lg",
+                                        "color": "#5FBBAC"
+                                    }]
                                 }]
                             }
                         }]
