--- a/templates/liff.html
+++ b/templates/liff.html
@@ -166,8 +166,8 @@
                                         "type": "button",
                                         "action": {
                                             "type": "uri",
-                                            "label": "action",
-                                            "uri": "http://linecorp.com/"
+                                            "label": "❖看看我挖到什麼",
+                                            "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ"
                                         },
                                         "style": "secondary",
                                         "color": "#5FBBAC"
