--- a/templates/liff.html
+++ b/templates/liff.html
@@ -174,9 +174,9 @@
                                     }, {
                                         "type": "button",
                                         "action": {
-                                            "type": "uri",
-                                            "label": "action",
-                                            "uri": "http://linecorp.com/"
+                                            "type": "postback",
+                                            "label": "❖Maso的鑄鐵坊",
+                                            "data": "Maso的鑄鐵坊"
                                         },
                                         "style": "secondary",
                                         "margin": "lg",
