--- a/templates/liff.html
+++ b/templates/liff.html
@@ -176,7 +176,7 @@
                                         "action": {
                                             "type": "postback",
                                             "label": "❖Maso的鑄鐵坊",
-                                            "data": "Maso的鑄鐵坊"
+                                            "data": "Maso"
                                         },
                                         "style": "secondary",
                                         "margin": "lg",
