--- a/templates/liff.html
+++ b/templates/liff.html
@@ -175,7 +175,7 @@
                                         "type": "button",
                                         "action": {
                                             "type": "postback",
-                                            "label": "❖Maso的鑄鐵坊",
+                                            "label": "❖Maso的工作坊",
                                             "data": "Maso"
                                         },
                                         "style": "secondary",
