--- a/templates/liff.html
+++ b/templates/liff.html
@@ -173,14 +173,14 @@
                                         "color": "#5FBBAC"
                                     }, {
                                         "type": "button",
-                                        "action": {
-                                            "type": "postback",
-                                            "label": "Maso",
-                                            "data": "Maso"
-                                        },
                                         "style": "secondary",
                                         "margin": "lg",
-                                        "color": "#5FBBAC"
+                                        "color": "#5FBBAC",
+                                        "action": {
+                                            "type": "postback",
+                                            "label": "action",
+                                            "data": "hello"
+                                        }
                                     }]
                                 }]
                             }
